refactor: update Dockerfiles, upgrade Spring Boot version and improve Java syntax for both modules (successefully integrated with front via docker)